# house-expenditures

./: .gitignore  README.md  anomaly_flagged.csv  anomaly_leads.csv  anomaly_report.txt  build_site.py  index.html  overrides.json  overrides_2021.json  pyproject.toml
anomaly/: config.py  loader.py  report.py  run_anomaly.py  triage.py  vendors.py
anomaly/detectors/: category.py  insider.py  negative.py  timing.py  transactions.py  vendor.py
output/: 2016Q1-summary.csv  2016Q2-summary.csv  2016Q3-summary.csv  2016Q4-summary.csv  2017Q1-summary.csv  2017Q2-summary.csv  2017Q3-summary.csv  2017Q4-summary.csv  2018Q1-summary.csv  2018Q2-summary.csv  2018Q3-summary.csv  2018Q4-summary.csv  2019Q1-summary.csv  2019Q2-summary.csv  2019Q3-summary.csv  2019Q4-summary.csv  2020Q1-summary.csv  2020Q2-summary.csv  2020Q3-summary.csv  2020Q4-summary.csv  2021Q1-summary.csv  2021Q2-summary.csv  2021Q3-summary.csv  2021Q4-summary.csv  2022Q1-summary.csv  2022Q2-summary.csv  2022Q3-summary.csv  2022Q4-summary.csv  2023Q1-summary.csv  2023Q2-summary.csv  2023Q3-summary.csv  2023Q4-summary.csv  2024Q1-summary.csv  2024Q2-summary.csv  2024Q3-summary.csv  2024Q4-summary.csv  2025Q1-summary.csv  2025Q2-summary.csv  2025Q3-summary.csv  2025Q4-summary.csv  (+1 more)
src/house_expenditures/: __init__.py  cli.py  config.py  downloader.py  models.py  pipeline.py  url_index.py
tests/: anomaly_helpers.py  conftest.py  test_anomaly_detectors.py  test_anomaly_triage.py  test_anomaly_vendors.py  test_congress.py  test_matcher.py  test_normalize.py  test_parsers.py  test_staffers.py
(+13 files in other folders)
